<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Defeat The Troll</string>
    <string name="splash_text">Greetings, human! Come to do battle with a %1$s again, eh? How spiffing. Choose your method of %1$s defeat!</string>
    <string name="meme_btn_text">Memes</string>
    <string name="axe_btn_txt">Axe</string>
    <string name="meme_splash_text">So, you chose memes.\nThe good news: %1$ss are weak towards memes.\nThe bad news: The %1$s is woefully out of touch. Proceed accordingly.\nThe %1$s is browsing the internet, using Internet Explorer; they laugh, saying \"Haha, that cat wants to haz cheezburger!\" Your phone at the ready, hit him with your best meme.</string>
    <string name="show_meme_btn_txt">Show Meme</string>
    <string name="play_again_btn_txt">Play Again?</string>
    <string name="victory_splash_txt">Congratulations, you defeated the %1$s!</string>
    <string name="defeat_splash_txt">In Soviet Russia, you defeat %1$s! Here though, you die.</string>
    <string name="meme_loss_txt">The %1$s proves the age old adage, "If your memes aren't funny, a %1$s will rip you limb from limb." Better luck next time!</string>
    <string name="meme_win_txt">The %1$s has laughed himself to death, improbably. Good job, memelord.</string>
    <string name="generic_error">Hmmm, that didn\'t really jive, try again perchance?</string>
    <string name="duplicate_meme_txt">You\'ve shown the %1$s that meme before; He\'s not impressed</string>
    <string name="meme_low_dmg_txt">You don\'t get the feeling the %1$s found that terribly funny…</string>
    <string name="meme_med_dmg_txt">The %1$s laughs, clearly appreciating your meme.</string>
    <string name="meme_high_dmg_txt">The %1$s laughs and laughs, slapping it\'s knee. I guess you could call it a real…funny meme!</string>
    <string name="meme_negative_dmg_txt">The %1$s suddenly looks angry, and tells you to get back in your basement!</string>
    <string name="axe_splash_txt">You chose \"Axe\". As in, the thing the %1$s is most likely to kill you with. Okay Zoomer, let\'s see if you can end up dead here.</string>
    <string name="axe_sel_prompt_txt">Choose your axe:</string>
    <string name="action_sel_prompt_txt">Each round, choose to either attack or defend; successfully defending means you take no damage, and deal a small amount of damage in return, while attacking obviously damages the %1$s the most, but you could die very quickly.</string>
    <string name="war_axe_btn_txt">War Axe</string>
    <string name="peace_axe_btn_txt">Peace Axe</string>
    <string name="war_and_peace_axe_btn_txt">War and Peace Axe</string>
    <string name="attack_btn_txt">Attack</string>
    <string name="defend_btn_txt">Defend</string>
    <string name="quest_btn_txt">Quest</string>
    <string name="quest_prompt_txt">Very well, human, a quest it shall be.\nAs you journey, you will gain keywords that will effect your choices; choose wisely!</string>
    <string name="Continue_btn_txt">Continue</string>
    <string name="keywords_prefix">Keywords:\n</string>
    <string name="love_btn_text">Love</string>
    <string name="love_prompt">Erm.\nWell, okay, I guess I did offer it.\nYou pull out your phone and install the app \"Love at First Bite,\" the premier dating app for %1$ss. After setting up a profile, you show the %1$s all the single Lady %1$ss in the area he can connect with. (Choose a %1$s lady below and try and connect!)</string>
    <string name="find_love_btn_txt">Go Find Love! &lt;3></string>
    <string name="name_label_txt">Name:</string>
    <string name="favorite_label_txt">Favorite Thing:</string>
    <string name="bite_btn_txt">Bite Now!</string>
    <string name="message_input_hint">Enter Message Text Here</string>
    <string name="send_btn_txt">Send</string>
    <string name="settings_btn_desc">Adjust Settings</string>
    <string name="beast_type_label">Select Beast Type:</string>
    <string name="return_btn_txt">Return</string>
    <string name="feedback_rating_txt">Rating: %1$d</string>
    <string name="login_internal_error">Something went wrong while trying to login, try again soon?</string>

    <string name="default_beast">Troll</string>
    <string name="preference_file_key">com.examle.defeatTheTroll.PREFERENCE_FILE</string>
    <string name="saved_beast_key">selected_beast</string>
    <string name="saved_auth_key">saved_auth</string>
    <string name="regen_quests_btn_txt">Regenerate Quests</string>
    <string name="post_feedback_btn_txt">Post Feedback</string>
    <string name="view_feedback_btn_txt">View Feedback</string>
    <string name="feedback_title_txt">Title:</string>
    <string name="feedback_content_txt">Content:</string>
    <string name="login_splash_txt">Greetings, human! Log in to post and view feedback, and maybe unlock additional magic!</string>
    <string name="login_name_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="remember_me_chk_txt">Remember Me</string>
    <string name="art_btn_txt">Art</string>
    <string name="art_prompt_txt">Ah, a capital idea, the %1$s will never see it coming! Partly because, you know, it makes no sense. You challenge the %1$s to an art competition, and it agrees.\n\nYou\'ll be asked to draw shapes quickly and well; try and do better than the %1$s in 3 rounds to win!</string>
    <string name="continue_art_btn_txt">To Art!</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="display_name_txt">Display Name:</string>
    <string name="create_game_btn_txt">Create Game</string>
    <string name="join_game_btn_txt">Join Game</string>
    <string name="private_game_switch">Private Game?</string>
    <string name="magic_btn_txt">Magic</string>
    <string name="confirm_create_game_btn_txt">Confirm Create Game</string>
    <string name="existing_game_id_hnt">Game Id</string>
    <string name="existing_game_id_txt">Private Game Id:</string>
    <string name="chat_msg_txt_hint">Chat Message</string>
    <string name="guess_spnr_txt">Your Guess:</string>
    <string name="guess_btn_txt">Guess</string>
    <string name="waiting_for_player_txt">Waiting for another player to join...</string>
</resources>
